--- a/Informe/Secciones/III0_diseno_teo.tex
+++ b/Informe/Secciones/III0_diseno_teo.tex
@@ -1,5 +1,5 @@
 
-	\Juan{Hablar de capacitores conectados a tierra y a las fuentes de corriente}
+	%\Juan{Hablar de capacitores conectados a tierra y a las fuentes de corriente}
 
 	En la Figura \ref{fig.cto_completo} se muestra el circuito amplificador de potencia completo, donde se han identificado en línea punteada los bloques que conforman el amplificador. Se debe destacar que dicha selección de bloques es aproximada, ya que las etapas se encuentran relacionadas, es decir que comparten componentes y una etapa sin la otra podría no operar correctamente. A continuación se detallará el funcionamiento de la implementación de cada bloque, comenzando por la etapa de salida.
 
