--- a/Informe/Secciones/III2_vas.tex
+++ b/Informe/Secciones/III2_vas.tex
@@ -10,4 +10,4 @@
 	\label{ec.av_vas}
 \end{equation}
 	
-	\Juan{Se ponen los caps entre el emisor del vas y la fuente para filtrar ruidos de la fuente y que no sean amplificados.}
+	%\Juan{Se ponen los caps entre el emisor del vas y la fuente para filtrar ruidos de la fuente y que no sean amplificados.}
