--- a/Informe/Secciones/III4_realimentacion.tex
+++ b/Informe/Secciones/III4_realimentacion.tex
@@ -1,5 +1,5 @@
 
-	\Juan{Hablar de qué sirven los diodos y el cap.. si no recuerdo más es para un filtro y los diodos son por los picos altos que puede tener al ser un cap muy grande}
+	%\Juan{Hablar de qué sirven los diodos y el cap.. si no recuerdo más es para un filtro y los diodos son por los picos altos que puede tener al ser un cap muy grande}
 	\graficarEPS{0.6}{red_realim}{Red de realimentación propuesta.}{fig:red_realim}
 	Se propone utilizar una realimentación negativa serie paralelo compuesto por las resistencias $R_{27}$ y $R_{15}$. Así se estabiliza el circuito en continua y también mejorar las características de amplificador de tensión (impedancia de entrada alta e impedancia de salida baja). Para limitar la corriente de base entrante al terminal inversor, el valor de $R_{27}$ debe ser del orden de las decenas de \si{\kilo\ohm}. Proponiendo los valores $R_{27}=\SI{22}{\kilo\ohm}$ y $R_{15}=\SI{1.1}{\kilo\ohm}$ se obtiene:
 
