--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -147,6 +147,16 @@
 		\end{tabular}
 		\label{tab.valores}
 		\end{table}
+
+		En el esquema \ref{fig:esq_med} se marcan los puntos correspondientes a las mediciones de polarización de la tabla \ref{tab.valores}.
+
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale=0.6]{./Figuras/esquema_puntos.pdf}
+			\caption{Puntos de medición.}
+			\label{fig:esq_med}
+		\end{figure}
+
 		%\Gus{hay que calcular las corrientes y sus variaciones y poner los puntos A B C .... en xcircuit que estaban marcados}
 		\subsubsection{Distorsión total armónica}
 
