--- a/Informe/Secciones/III1_etapa_salida.tex
+++ b/Informe/Secciones/III1_etapa_salida.tex
@@ -2,7 +2,7 @@
 
 	En la Figura \ref{fig.salida} se muestra un esquema básico de la topología, denominada clase G alternativa.  Los transistores $Q_{63}$ y $Q_{64}$ conforman la etapa interior que opera en clase B, siendo $Q_{14}$ y $Q_{15}$ los \textit{drivers} y sus resistencias de emisor compartidas. 
 
-	\Juan{Hay que modificar para que coincida con lo de Nico}
+	%\Juan{Hay que modificar para que coincida con lo de Nico}
 	\begin{figure}[H]
 		\centering
 		\scalebox{0.5}{\input{salida}}
@@ -16,7 +16,7 @@
 
 
 	\HgraficarEPS{0.5}{salidaB}{Forma de la señal de salida, y tensiones umbrales}{fig.teo_salida}
-	\Juan{Hay que modificar para que coincida con lo de Nico}
+	%\Juan{Hay que modificar para que coincida con lo de Nico}
 	\begin{figure}[H]
 		\centering
 		\scalebox{0.5}{\input{salida_2}}
@@ -29,7 +29,7 @@
 
 Las tensiones $V_{bias1}$ y $V_{bias2}$ permiten \textit{prepolarizar} a los transistores $Q_{63}$ y $Q_{64}$ con el fin de atenuar la distorsión de cruce por cero característica del clase B. Se deben ajustar de forma tal que la corriente de la malla de salida sea aproximadamente igual en el colector de ambos transistores ($Q_{63}$ y $Q_{64}$). Asimismo se debe considerar que si $I_{CQ}$ es muy elevada se desperdicia potencia, y si es muy pequeña se obtendrá una distorsión de cruce por cero apreciable. Ambas tensiones se implementaron con un multiplicador de $V_{BE}$ cuyo circuito se presenta en la Figura \ref{fig.multiplicador}.
 
-	\Juan{Idem}
+	%\Juan{Idem}
 	\begin{figure}[H]
 		\centering
 		\scalebox{0.5}{\input{multiplicador}}
