--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -157,7 +157,7 @@
 			\label{fig:esq_med}
 		\end{figure}
 
-		%\Gus{hay que calcular las corrientes y sus variaciones y poner los puntos A B C .... en xcircuit que estaban marcados}
+		\Gus{hay que calcular las corrientes y sus variaciones}
 		\subsubsection{Distorsión total armónica}
 
 		El banco de medición para la distorsión total armónica se muestra en la figura \ref{fig:thd_bco}. Los valores se obtuvieron mediante el software \textit{SpectraPlus}. Se utilizó la placa de audio de la PC para generar la señal, ya que un generador de laboratorio presenta un valor elevado de \texttt{THD}. Asimismo es necesario utilizar un atenuador resistivo debido a que la PC no admite como entrada un valor mayor a 1Vrms. 
@@ -188,7 +188,7 @@
 %
 %		\subsubsection{Respuesta en frecuencia}
 %
-%		\subsubsection{Impedancia de salida}
+		\subsubsection{Impedancia de salida}
 %
 %		\subsubsection{Margen de fase}
 %
@@ -215,13 +215,13 @@
 
 		\subsubsection{Slew-Rate y Ancho de banda de Potencia}
 		Se mide a maxima potencia a $1Khz$ y se calcula la pendiente a la salida que se genera por la respuesta al escalón.
-		%\Gus{Fotoo , mañana}
+		\Gus{Foto}
 
 		\begin{equation*}
 			SR  = \frac{\varDelta v}{\varDelta t} = 7.4 \frac{V}{us}
 		\end{equation*}
 
-		%\subsubsection{Eficiencia}
+		\subsubsection{Eficiencia}
 
 		\subsection{Respuesta en frecuencia}
 
