Se sube el gráfico de eficiencia

--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -282,6 +282,13 @@
 			SNR_{db}  = 98.75 - 8.21 = 90.54 dB  
 			\end{equation*}
 
+			\subsubsection{Eficiencia}
+
+%			\graficarEPS{0.6}{graf_eficiencia}{Gráfico de la eficiencia en función de la potencia disipada por la carga}{fig:eficiencia}
+%			\begin{figure}[H]
+%				\centering
+%				\scalebox{0.6}{\input{graf_eficiencia}
+%			\end{figure}
 
 %		
 %		\subsubsection{Rechazo de Ruido de la Fuente de Alimentación}
