--- a/Informe/Figuras/multiplicador.tex
+++ b/Informe/Figuras/multiplicador.tex
@@ -9,12 +9,12 @@
    \parbox{4.18229in}{
    \includegraphics[scale=1]{multiplicador}\\
    % translate x=672 y=611 scale 0.38
-   \putbox{3.56in}{2.32in}{1.20}{CM}%
-   \putbox{2.47in}{2.32in}{1.20}{QM}%
-   \putbox{0.56in}{3.07in}{1.20}{R1M}%
+   \putbox{3.56in}{2.32in}{1.20}{C20}%
+   \putbox{2.47in}{2.32in}{1.20}{Q26}%
+   \putbox{0.56in}{3.07in}{1.20}{R43}%
    \putbox{0.72in}{1.74in}{1.20}{Rp}%
-   \putbox{0.64in}{0.82in}{1.20}{R2M}%
-   \putbox{1.89in}{4.24in}{1.20}{R3M}%
+   \putbox{0.64in}{0.82in}{1.20}{R44}%
+   \putbox{1.89in}{4.24in}{1.20}{R42}%
    \putbox{4.06in}{4.07in}{1.20}{\centbox{\midbox{1,1}}}%
    \putbox{4.06in}{0.24in}{1.20}{\centbox{\midbox{-1,1}}}%
    \putbox{0.47in}{2.32in}{1.20}{Ipol}%
