--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -258,10 +258,16 @@
 
 		\subsubsection{Slew-Rate y Ancho de banda de Potencia}
 		Se mide a maxima potencia a $1Khz$ y se calcula la pendiente a la salida que se genera por la respuesta al escalón.
-		\Gus{Foto}
+	
+
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale=0.1]{./Mediciones/SlewRatePotencia.jpg}
+			\caption{Slew Rate.}
+		\end{figure}
 
 		\begin{equation*}
-			SR  = \frac{\varDelta v}{\varDelta t} = 7.4 \frac{V}{us}
+			SR  = \frac{\varDelta v}{\varDelta t} = 11.213 \frac{V}{us}
 		\end{equation*}
 
 		\subsubsection{Eficiencia}
