--- a/Informe/Secciones/VII2_valid.tex
+++ b/Informe/Secciones/VII2_valid.tex
@@ -107,7 +107,7 @@
 		\end{figure}
 
 		\subsubsection{Variación de la Fuente de Alimentación}
-		
+		\begin{table}
 			\begin{tabular}{|l|l|l|l|l|l|}
 				\hline
 				& \multicolumn{2}{c|}{$V_{H+} = \SI{28.7}{\V} \; V_{H-} = \SI{28.7}{\V}$ } & \multicolumn{2}{c|}{$V_{H+} = \SI{25.2}{\V} \; V_{H-} = \SI{25.1}{\V}$ } & \multirow{2}{1cm}{Variacion $[\%]$}	\\ \hline
