--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -167,7 +167,9 @@
 
 		\section{Validación y resultados}
 			\input{VII2_valid.tex}
-
+			%\input{VII2_valid_ro.tex}
+		\section{Validación}
+			\input{VIII2_resultados.tex}
 	\part{Conclusiones}\label{part:conclusiones}
 		\input{VIII_conclusiones.tex}
 
